--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="col-md-4">
             </div>
             <div class="col-md-4" id="fileDiv">
-                <row>
+                <div class="row">
                     <div class="col-md-4">
                     </div>
                     <div class="col-md-4 inputDiv">
@@ -70,7 +70,7 @@
                     </div>
                     <div class="col-md-4">
                     </div>
-                </row>
+                </div>
             </div>
             <div class="col-md-4">
             </div>
