--- a/index.html
+++ b/index.html
@@ -21,17 +21,21 @@
 
   <body>
 
+    <div id="banner"><img src="unnamed.png" height=100px ></div>
     <div class="container">
+        <div class="row">
+         </div>
+        <br>
         <div class="row">
             <div class="col-sm-12">
                 <div class="dropdown">
                   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    Dropdown
+                    Login
                     <span class="caret"></span>
                   </button>
                   <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                     <li>Username: <input type="text" id="loginUsername"></li>
-                    <li>Password: <input type="text" id="loginPassword"></li>
+                    <li>Password: <input type="password" id="loginPassword"></li>
                     <li role="separator" class="divider"></li>
                     <li id="loginLI" style="text-align: center;">Login</li>
                   </ul>
@@ -59,13 +63,9 @@
                     <div class="col-md-4 inputDiv">
                         <form>
                             <div class="form-group">
-                                <input type="file" id="uploadInput">
+                                <input type="file" id="uploadInput"><br>
                             </div>
-                            <div class="form-group">
-                            <label for="eMail">E-Mail:</label>
-                            <input type="text" id="eMail">
-                            </div>    
-                            <button id="upload" type="button" class="btn btn-danger">Upload</button>
+                            <button id="upload" type="button" class="btn btn-large btn-danger">Upload</button>
                          </form>
                     </div>
                     <div class="col-md-4">
@@ -77,51 +77,58 @@
         </div>
             
       </div>
-        <div class="container" id="accountDiv">
-            <div class="row">
-                <div class="col-md-4">
-                </div>
-                <div class="col-md-4" style="text-align: center">
-                    <h4>
-                    Fill in the information below to<br> create an account to track your uploads!
-                    </h4>
-                </div>
-                <div class="col-md-4"></div>
+      </div>
+      <br>
+      <div class="container">
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">    
+                <form style="text-align:center">
+                        <div class="form-group">
+                      </div>
+                        <label for="userTags">Personal Tags</label>
+                        <input type="text" id="userTags">
+                  </form>
             </div>
-            <div class="row">
-                <div class="col-md-4"></div>
-                <div class="col-md-4 inputDiv">
-                    <form>
-                        <div class="form-group">
-                            <label for="firstName">First Name</label>
-                            <input type="text" id="firstName">
-                        </div>
-                        <div class="form-group">
-                            <label for="lastName">Last Name</label>
-                            <input type="text" id="lastName">
-                        </div>
-                        <div class="form-group">
-                            <label for="username">Username</label>
-                            <input type="text" id="userName">
-                        </div>
-                         <div class="form-group">
-                            <label for="password">Password</label>
-                            <input type="text" id="password">
-                        </div>
-                        <div class="form-group">
-                            <label for="terms">Check the Box to Agree to <a href="terms.html">Terms of Service.</a></label><br>
-                            <input type="checkbox" id="terms">
-                        </div>
-                        <button id="createAccount" type="button" class="btn btn-danger">Create Account</button>
-                        <div id="boxError" style="text-color: red; visibility: hidden;">You Must Accept Terms Of Service</div>
-                        <div id="otherError" style="text-color: red; visibility: hidden;">You Must Enter All Information</div>
-                    </form>
-                </div>
-                <div class="col-md-4"></div>
-                
+            <div class="col-md-4">                
             </div>
-        </div>
-
+      </div>
+          <br>
+          <div class="row">
+              <div class="col-sm-3">
+                  <form style="text-align:center">
+                        <div class="form-group">
+                      </div>
+                        <label for="Sports">Sports</label>
+                        <input type="checkbox" id="sports">
+                  </form>
+              </div>
+                <div class="col-sm-3">
+                  <form style="text-align:center">
+                        <div class="form-group">
+                      </div>
+                        <label for="Prayer">Prayer</label>
+                        <input type="checkbox" id="Prayer">
+                  </form>
+              </div>
+                <div class="col-sm-3">
+                  <form style="text-align:center">
+                        <div class="form-group">
+                      </div>
+                        <label for="cooking">Cooking</label>
+                        <input type="checkbox" id="cooking">
+                  </form>
+              </div>
+            <div class="col-sm-3">
+                  <form style="text-align:center">
+                        <div class="form-group">
+                      </div>
+                        <label for="Culture">Culture</label>
+                        <input type="checkbox" id="Culture">
+                  </form>
+              </div>
+              </div>
+          </div>
     <!-- /.container -->
 
 
