Final Final Changes
Final Changes For Real to the UI

--- a/createAccount.html
+++ b/createAccount.html
@@ -16,7 +16,7 @@
       
 </head>
 <body>
-    <div class="container" id="accountDiv">
+    <div class="container" style="padding-top: 20px;"id="accountDiv">
 
             <div class="row">
                 <div class="col-md-4">
@@ -52,9 +52,7 @@
                             <label for="terms">Check the Box to Agree to <a href="terms.html">Terms of Service.</a></label><br>
                             <input type="checkbox" id="terms">
                         </div>
-                        <input type="submit">
-                        <div id="boxError" style="text-color: red; visibility: hidden;">You Must Accept Terms Of Service</div>
-                        <div id="otherError" style="text-color: red; visibility: hidden;">You Must Enter All Information</div>
+                        <button type="button" class="btn btn-danger" id="createAccount">Create Account</button>
                     </form>
                 </div>
                 <div class="col-md-4"></div>
