--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         <div class="row">
             <div class="col-md-4"></div>
-            <div id="headerDiv" class="col-md-4"><h1>BRICStudio</h1></div>
+            <div id="headerDiv" class="col-md-4"><h1>BRIC BHIVE</h1></div>
             <div class="col-md-4"></div>
         </div>
         <div class="row">
@@ -128,7 +128,10 @@
                   </form>
               </div>
               </div>
+            <div class="row">
+                
           </div>
+        
     <!-- /.container -->
 
 
