--- a/createAccount.html
+++ b/createAccount.html
@@ -41,7 +41,7 @@
                             <input type="text" id="lastName">
                         </div>
                         <div class="form-group">
-                            <label for="username">Username</label>
+                            <label for="username">E-Mail</label>
                             <input type="text" id="userName">
                         </div>
                          <div class="form-group">
